Update VisitorManagementSystem.java